<resources>
    <string name="app_name">Listapp</string>
    <string name="title_activity_splash_screen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="show_activity_btnSubmit_name">Delete</string>
    <string name="show_info_activity_tvStatus_name">Status :</string>
    <string name="show_info_activity_errorMessage">There is an Error!</string>
    <string name="add_to_list_activity_tvGenderTitleName">Gender</string>
    <string name="add_to_list_activity_tvStatusTitleName">Status</string>
    <string name="add_to_list_btnAddName">Add</string>
    <string name="add_to_list_activity_tVNameTitleName">Name</string>
    <string name="add_to_list_activity_tVDescriptionTitleName">Description</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="text_fields_empty_message">One or more text fields are empty!</string>
</resources>